# Haka-Server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  compile_commands.json  haka_example  test.http
.cache/clangd/index/: CMakeCXXCompilerId.cpp.62072EE57FB5BAC0.idx  Haka.hpp.0254DD795053DB42.idx  address.hpp.0104CB2585E4E7CD.idx  address.hpp.5D0F20DF059056F2.idx  address.ipp.9CB522DC5F8F9D83.idx  address_v4.hpp.0C937F884F876DB1.idx  address_v4.hpp.D22ED1FE2EC15C29.idx  address_v4.ipp.590547FFC277D0A5.idx  address_v4_iterator.hpp.84F03AB59D73D80E.idx  address_v4_range.hpp.552958D414D2B00A.idx  address_v6.hpp.6C93462E4A8457F1.idx  address_v6.hpp.7B24847826BB02DF.idx  address_v6.ipp.6AB9CCFF672D2E0C.idx  address_v6_iterator.hpp.F034C98C500A4A67.idx  address_v6_range.hpp.77892DED33996A46.idx  algorithms.h.94E56A78E0861D81.idx  allocator.hpp.A8BB9A5BDFE52CC2.idx  any_executor.hpp.6E4A622910437B07.idx  any_io_executor.hpp.3A144EFF7AED5F72.idx  any_io_executor.ipp.6DBCE835D8190706.idx  append.hpp.8D6ED1F6E0F74737.idx  append.hpp.FE8E5EADFE06F16C.idx  arg_list_macro.hpp.4D808BBE111B5757.idx  arg_list_macro_gen.hpp.E98F5E0C3F703040.idx  array.hpp.A92881EDBAB6B730.idx  array_fwd.hpp.76C793F8E9272C0C.idx  as_invocable.hpp.955190AADFFFBC17.idx  as_operation.hpp.A5B6173D270AF9A3.idx  as_receiver.hpp.A13C8794E11CE311.idx  as_tuple.hpp.0DA3EA231B387367.idx  as_tuple.hpp.7F144C2CC6F00EDF.idx  asio.hpp.23BEC98D77E21AC4.idx  assert.hpp.1D5A12E0A3403B7D.idx  associated_allocator.hpp.2B2A2DDD1F8CA28B.idx  associated_cancellation_slot.hpp.356540CABBEF7127.idx  associated_executor.hpp.310A8081F1134707.idx  associator.hpp.A0B5A9AEC23A9F1C.idx  async_result.hpp.E0D65323C7661012.idx  atomic_count.hpp.556D9C9C51BE61BB.idx  awaitable.hpp.706CF55E1D0A2C9C.idx  (+463 more)
include/: Haka.hpp
include/haka/: core.hpp  router.hpp  server.hpp
public/: index.html
public/css/: style.css
public/js/: script.js
src/: main.cpp  users.cpp
